--- a/src/main/resources/templates/events/index.html
+++ b/src/main/resources/templates/events/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 <h1>All Events</h1>
+<nav th:replace="fragments :: navigation"></nav>
 <p th:unless="${events} and ${events.size()}">No Events</p>
 <ul>
 <th:block th:each="event: ${events}">
