--- a/src/main/resources/templates/events/index.html
+++ b/src/main/resources/templates/events/index.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="https://www.thymeleaf.org/">
 <head th:replace="fragments :: head"></head>
-<body>
+<body class = "container">
 <h1>All Events</h1>
 <nav th:replace="fragments :: navigation"></nav>
 <p th:unless="${events} and ${events.size()}">No Events</p>
-<ul>
-<th:block th:each="event: ${events}">
-    <li th:text ="${event}" ></li>
+<table class="table table-striped" >
+    <thead>
+        <tr>
+            <th>Name</th>
+        </tr>
+    </thead>
+<tr th:each="event: ${events}">
+    <td th:text ="${event}" ></td>
 
-</th:block>
-</ul>
+</tr>
+</table>
 </body>
 </html>
