did code for validation errors

--- a/src/main/resources/templates/events/create.html
+++ b/src/main/resources/templates/events/create.html
@@ -5,6 +5,7 @@
 
 <h1>Create Event</h1>
 <nav th:replace="fragments :: navigation"></nav>
+<p th:text="${errorMsg}" style="color:red"></p>
 <form method="post" action="/events/create">
     <div class="form-group">
         <label> Name
