--- a/src/main/resources/templates/events/create.html
+++ b/src/main/resources/templates/events/create.html
@@ -5,22 +5,25 @@
 
 <h1>Create Event</h1>
 <nav th:replace="fragments :: navigation"></nav>
-<p th:text="${errorMsg}" style="color:red"></p>
+
 <form method="post" action="/events/create">
     <div class="form-group">
         <label> Name
-            <input type="text" name="name" class="form-control">
+            <input th:field="${event.name}" class="form-control">
         </label>
+        <p class="error" th:errors="${event.name}"></p>
     </div>
     <div class="form-group">
         <label> Description
-            <input type="text" name="description" class="form-control">
+            <input th:field="${event.description}" class="form-control">
         </label>
+        <p class="error" th:errors="${event.description}"></p>
     </div>
     <div class="form-group">
         <label> Contact Email
-            <input type="text" name="contactEmail" class="form-control">
+            <input th:field="${event.contactEmail}" class="form-control">
         </label>
+        <p class="error" th:errors="${event.contactEmail}"></p>
     </div>
     <div class="form-group">
         <input type="submit" value="Create Event" class="btn btn-success">
