--- a/src/main/resources/templates/events/create.html
+++ b/src/main/resources/templates/events/create.html
@@ -26,11 +26,12 @@
         <p class="error" th:errors="${event.contactEmail}"></p>
     </div>
     <div class="form-group">
-        <label> Type
-            <select th:field="${event.type}">
-                <option th:each="type:${types}" th:value="${type}" th:text="${type.displayName}"></option>
+        <label> Categories
+            <select th:field="${event.eventCategory}">
+                <option th:each="eventCategory:${eventCategories}" th:value="${eventCategory.id}" th:text="${eventCategory.name}"></option>
             </select>
         </label>
+        <p class="error" th:errors="${event.eventCategory}"></p>
     </div>
     <div class="form-group">
         <input type="submit" value="Create Event" class="btn btn-success">
