done one to many relationship

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -9,6 +9,7 @@
 </head>
 <body>
 <nav th:fragment="navigation">
+    <h1 th:text="${title}">Coding Events</h1>
     <ul class="nav">
         <li class="nav-item"><a class="nav-link" href="/events">All Events</a></li>
         <li  class="nav-item"><a class="nav-link" href="/events/create">Create Event</a></li>
